Accounts system is also Attached

--- a/livestockapp/templates/animal_category/insert.html
+++ b/livestockapp/templates/animal_category/insert.html
@@ -1,4 +1,4 @@
-{% extends 'navbar.html' %}
+{% include 'navbar.html' %}
 {% block content %}
     {% if success %} 
     <div class="alert alert-success alert-dismissible fade show" role="alert">
