--- a/livestockapp/templates/animal_category/update.html
+++ b/livestockapp/templates/animal_category/update.html
@@ -1,4 +1,4 @@
-{% extends 'navbar.html' %}
+{% include 'navbar.html' %}
 {% block content %}
     <div class="row">
         <div class="col-sm-8 offset-2">
