--- a/livestockapp/templates/pregnancy_details/update_pregnancy_detail.html
+++ b/livestockapp/templates/pregnancy_details/update_pregnancy_detail.html
@@ -3,7 +3,7 @@
     <title>Pregnancy Detail</title>
   </head>
 <body>
-{% extends 'navbar.html' %}
+  {% include  'navbar.html' %}
 {% block content %}
 <div  >
   <div class="row min-vh-100 flex-column flex-md-row " style="margin-left:-13%;">
