--- a/livestockapp/templates/groups/list_group.html
+++ b/livestockapp/templates/groups/list_group.html
@@ -1,9 +1,15 @@
-{% extends 'navbar.html' %}
-{% block content %}
+<html>
+  <head>
+    <title>List User Groups</title>
+  </head>
+<body>
+{% include 'navbar.html' %}
+
    
 <div class="container my-3">
+  <a class="btn btn-primary" href='/insert_group' style="margin-left: 90%">Add Groups</a>
   <h4 class="text-center alert alert-info py-3">List of Groups</h4>
-{% if group_list %}
+
   <table class="table table-bordered"  id="animalTable">
     <thead>
       <tr>
@@ -25,9 +31,7 @@
       {% endfor %}
     </tbody>
   </table>
-{% else %}
-  <h4 class="text-center alert alert-warning">No Record</h4>
-{% endif %}
+
 </div>    
 
 
@@ -48,5 +52,3 @@
   });  
 </script>
 
-
-{% endblock content %}
