--- a/livestockapp/templates/navbar.html
+++ b/livestockapp/templates/navbar.html
@@ -1,97 +1,59 @@
-<!doctype html>
- {% load static %}
+
 <html lang="en">
 
   <head>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    {% comment %} <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.css">
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.js"></script> {% endcomment %}
+    
+  </head>
+  
+  <body>
+   {% comment %} <b>User Id: {{user.id}}</b>
+    <br>
+    <b>User Name: {{user.username}}</b>
+    <br>
+    <b>Is Super User: {{user.is_superuser}}</b>
+    <br>
+    <b>User group: {{user_group}}</b>  {% endcomment %}
     
 
-
-
-
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.css">
-
-<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.js">
-</script>
-  </head>
-  <body>
- 
-
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">LiveStock</a>
+  <a class="navbar-brand" href="/dashboard">LiveStock</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Category
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="/">Add Category</a>
-          <a class="dropdown-item" href="/show">Category List</a>
-        </div>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Animal_Profile
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href='/insert_animal_profile'>Add Animal_Profile</a>
-          <a class="dropdown-item" href='/list_animal_profile'>Animal_Profile List</a>
-        </div>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          User Profile
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href='/register_user_profile'>Create User Profile</a>
-          <a class="dropdown-item" href='/list_user_profile'>User List</a>
-        </div>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Groups
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href='/insert_group'>Add Groups</a>
-          <a class="dropdown-item" href='/list_group'>Group List</a>
-        </div>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Pregnancy_Detail
-</a>
-<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-  <a class="dropdown-item" href='/insert_pregnancy_detail'>Add Pregnancy_Detail</a>
-  <a class="dropdown-item" href='/list_of_animals'>List of Animal </a>
-</div>
-      </li>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      {% comment %} Admin Section {% endcomment %}
+      {% if user_group == 1 %}
+        {% include 'navbars/admin_navbar.html' %}
+      {% else %}
+        {% url 'user_logout' %}
+      {% endif %}
       
-    </ul>
-    <div class=" my-2 my-lg-0">
-      {% comment %} <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search"> {% endcomment %}
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Profile</button>
-      
+    </div>
+      <ul class="navbar-nav mr-auto">
+        {% if user.username is not None %}
+            <li class="nav-item dropdown custom-dropdown"  >
+                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">{{user.username|capfirst}}</a>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="{% url 'user_logout' %}">Log Out</a>
+                </div>
+            </li>
+        {% endif %}
+      </ul>
     </div>
   </div>
 </nav>
-    
-<div class="container ">
-    
-    {% block content %}    {% endblock content %}
-
-</div>
- 
 
 
 
