purchase voucher for animal is added

--- a/livestockapp/templates/accounts/purchase/purchase_bill.html
+++ b/livestockapp/templates/accounts/purchase/purchase_bill.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-    {% include 'header.html' %}
+    {% include 'navbar.html' %}
     <div id="msg"></div>
 
     <div style="margin-left:1000px;" class="mt-3">
