--- a/livestockapp/templates/navbars/admin_navbar.html
+++ b/livestockapp/templates/navbars/admin_navbar.html
@@ -37,17 +37,13 @@
         </div>
       </li>
 
-
-
-
-
-      {% comment %} <li class="nav-item dropdown">
+      <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Purchase</a>
         <div class="dropdown-menu">
           <a class="dropdown-item" href="{% url 'purchase_bill' %}">Purchase Bills</a>
           <a class="dropdown-item" href="{% url 'bill_details' %}">Bill Details</a>
         </div>
-      </li> {% endcomment %}
+      </li>
 
       {% comment %} <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Sales</a>
