--- a/livestockapp/templates/accounts/purchase/bill_details.html
+++ b/livestockapp/templates/accounts/purchase/bill_details.html
@@ -1,8 +1,7 @@
 <html>
 
 <body>
-    {% include 'header.html' %}
-    <!-- ----------------------------------------------------------------------------------------------------------------- -->
+    {% include 'navbar.html' %}
         <table style="width:90%; margin-left: 3%; margin-right: 3%; margin-top: 5px;" >
             <tr>
                 <td>
@@ -57,7 +56,6 @@
             <!-- table end  -->
         </div>
         <hr style="margin-left: 3%; margin-right: 3%;">
-        <!-- --------------------------------------------------------------------------------------------------------------------- -->
 </body>
 
 </html>
