--- a/livestockapp/templates/animal_profile/update_animal_profile.html
+++ b/livestockapp/templates/animal_profile/update_animal_profile.html
@@ -7,88 +7,44 @@
 
   {% include 'navbar.html' %}
 
-{% block content %}
 
 
-<div  >
-  <div class="row min-vh-100 flex-column flex-md-row " style="margin-left:-13%;">
-    <aside class="col-12 col-md-3 col-xl-2 p-0 bg-dark ">
-      <nav class="navbar navbar-expand-md navbar-dark bd-dark flex-md-column flex-row align-items-center py-2 text-center sticky-top " id="sidebar">
-        <div class="text-center p-3">
-          <img src="https://impreza.us-themes.com/wp-content/uploads/paolo-bendandi-D-8XODEIr_s-unsplash.jpg" alt="profile picture" class="img-fluid rounded-circle my-4 p-1 d-none d-md-block shadow"/>
-         <a href="#" class="navbar-brand mx-0 font-weight-bold  text-nowrap" >XcentPupil</a>
-        </div>
-            <button type="button" class="navbar-toggler border-0 order-1" data-toggle="collapse" data-target="#nav" aria-controls="nav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-        
-        <div class="collapse navbar-collapse order-last" id="nav">
-          <ul class="navbar-nav flex-column w-100 justify-content-center">
-            <li class="nav-item">
-              <a href="#" class="nav-link active"> Edit Profile</a>
-            </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link"> Projects</a>
-            </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link"> Tasks </a>
-            </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link"> Users Info </a>
-            </li>
-          </ul>
-        </div>      
-      </nav>   
-    </aside>
-  </div>
-</div>
-  
+
+
 {% comment %} <div class="container my-3"> 
   <div  style="margin-left:30%; margin-top:-42%; "><b></b></div> {% endcomment %}
-<div style=" margin-top:-42%; margin-right:5%">
-  <div class="alert alert-dark mt-5" role="alert" style="margin-top:50%; margin-left:10%"><b >Basic Info</b></div>
+<div style="  margin:2%">
+  
   <form action='/update_animal/{{animal.animal_id}}' method="POST" >
+    <div class="alert alert-dark " role="alert" style="margin-top:5%;"><b >Basic Info</b></div>
     
     {% if error2 %}
-    <div class="alert alert-danger offset-2" role="alert">
-      Please Enter Token No !!    
-    </div>
+    <div class="alert alert-danger offset-2" role="alert">Please Enter Token No !! </div>
     {% endif %}  
     {% if error3 %}
-    <div class="alert alert-danger offset-2" role="alert">
-      Please Enter Name !!    
-    </div>
+    <div class="alert alert-danger offset-2" role="alert">Please Enter Name !! </div>
     {% endif %} 
     {% if error4 %}
-    <div class="alert alert-danger offset-2" role="alert">
-      Please Enter Color !!    
-    </div>
+    <div class="alert alert-danger offset-2" role="alert">Please Enter Color !! </div>
     {% endif %} 
     {% if error5 %}
-    <div class="alert alert-danger offset-2" role="alert">
-      Please Enter Category !!    
-    </div>
+    <div class="alert alert-danger offset-2" role="alert"> Please Enter Category !! </div>
     {% endif %} 
     {% if error6 %}
-    <div class="alert alert-danger offset-2" role="alert">
-      Please Enter Gender!!    
-    </div>
+    <div class="alert alert-danger offset-2" role="alert">Please Enter Gender!! </div>
     {% endif %} 
-
+    {% if error7 %}
+    <div class="alert alert-danger offset-2" role="alert"> Please Enter Person!! </div>
+    {% endif %} 
     {% if error8 %}
-    <div class="alert alert-danger offset-2" role="alert">
-      Please Enter pragnancy_start_date !!    
-    </div>
+    <div class="alert alert-danger offset-2" role="alert">Please Enter pragnancy_start_date !! </div>
     {% endif %} 
     {% if error9 %}
-    <div class="alert alert-danger offset-2" role="alert">
-      Please Enter is_Active Field !!    
-    </div>
+    <div class="alert alert-danger offset-2" role="alert">Please Enter is_Active Field !! </div>
     {% endif %} 
 
-
     {% csrf_token %}
-    <div class="container-fluid" style="margin-left:10%;">
+    {% comment %} <div class="container-fluid" style="margin-left:0%;"> {% endcomment %}
     <div class="row">
       <div class="col">
         <label class=" control-label">Token No :<span style="color:red; font-weight:bold;">*</span></label>
@@ -135,8 +91,17 @@
     
       <div class="col" >
         <label for="purchased_by">Purchased By :</label>
+        <select class="form-control" id="purchased_by" name="purchased_by">
+          <option value="">Select Vendor</option>
+          {% for party in all_parties %}
+            {% if party.party_code == animal.ref_party_profile_id %}
+            <option value="{{party.party_code}}" selected>{{party.name}}</option>
+            {% else %}
+            <option value="{{party.party_code}}" >{{party.name}}</option>
+            {% endif %}
+          {% endfor %}
+        </select>
         
-        <input type="text" class="form-control" id="purchased_by" name="purchased_by" value="{{animal.purchased_by}}" >
       </div>
     </div>
     <div class="row">
@@ -191,6 +156,13 @@
           <input type="checkbox"  id="status" name="status" value="{{animal.status}} ">
           {% endif %}
           <input type="text"  id="status_val" name="status_val"  value="0" hidden>
+      </div>  
+      <div class="col"  >
+      </div>
+      <div class="col"  >
+      </div>
+      <div class="col"  >
+        <button class="btn btn-sm btn-primary"  data-toggle="modal" data-target="#update_animal_pro" id="voucher_view">View Voucher</button>
       </div>    
     </div>
     <div class="row">
@@ -202,15 +174,89 @@
     <div>
       <button type="submit" class="btn btn-success my-3" >Update</button>  
     </div>
-  </div>
+  {% comment %} </div> {% endcomment %}
   </form>
 </div>
+
+
+<!--------------------------------------------------------------------->
+<!-- Modal of Animal VOucher Start -->
+<div class=" modal fade" id="update_animal_pro" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content" style="width: 1100px; margin-left: -300px;">
+        <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Voucher Detail</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="modal-body">
+          {% comment %} <form>
+            {% csrf_token %} {% endcomment %}
+            <div style="margin-left: 10px; margin-bottom: 30px;">
+                <table>
+                    <tr>
+                        <td><label><b>Bill no#</b></label></td>
+                        <td><input type="text" name="bill_id" id="bill_id" class="form-control" value="PV-{{purchase_detial.stock_purchase_main.bill_no}}" readonly></td>
+                        <td><label style="margin-left: 370px;"><b>Vendor</b><span style="color:red; font-weight:bold">*</span></label></td>
+                        <td>
+                            <input type="text"  name="" id="vendor_name" class="form-control" value="{{animal.ref_party_profile.name}}" readonly>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><label><b>Voucher Date</b></label></td>
+                        <td><input type="date" name="voucher_date" id="voucher_date" value="{{purchase_detial.stock_purchase_main.created_on|date:"Y-m-d"}}"
+                                class="form-control" readonly></td>
+                        <td></td>
+                    </tr>
+
+                </table>
+            </div>
+            <br>
+            <div class="form-group">
+                <table class="table" id="table_id">
+                    <thead>
+                        <tr>
+                            <th>Token Number<span style="color:red; font-weight:bold">*</span></th>
+                            <th>Description</th>
+                            <th>Unit Price</th>
+                        </tr>
+                    </thead>
+                    <tbody id="table_body">
+                        <tr>
+                            <td>
+                                <input type="text" name="token" id="token" class="form-control " value= "{{animal.token_no}}" readonly>
+                            </td>
+                            <td>
+                                <input name="name" id="name" class="form-control" value="{{animal.description}}" readonly>
+                            </td>
+                            <td>
+                                <div class="form-group">
+                                    <input type="text" name="price" id="price" class="form-control" value="{{purchase_detial.price}}" readonly>
+                                </div>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        {% comment %} </form> {% endcomment %}
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-primary" id="just_insert">Not Posted</button>
+            <button type="button" class="btn btn-primary" id="insert_and_close">Posted</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+    </div>
+</div>
+</div>
+<!-- Modal of Animal VOucher Start -->
+
           
 
 
 <script type="text/javascript">
  
-
+  $(document).ready(function() {
    
   if($('#status').is(":checked")){
     $("#status_val").val(1);
@@ -229,10 +275,39 @@
     })
 
 
+    // Voucer Code Start
+    $('#voucher_view').click(function(e){
+      e.preventDefault();
+      // Code goes here
+  });
+// writing token number in Voucher
+$("#token_no").on('keyup',function(){
+  var token_no = $("#token_no").val();
+  $("#token").val(token_no)
+})
+// writing Animal Name in Voucher
+$("#ani_name").on('keyup',function(){
+  var ani_name = $("#ani_name").val();
+  $("#name").val(ani_name)
+})
+// writing Animal Purchase Price in Voucher
+$("#purchase_price").on('keyup',function(){
+  var purchase_price = $("#purchase_price").val();
+  $("#price").val(purchase_price)
+})
+// Show Vendor Name in Voucher
+$("#purchased_by").on('change',function(){
+  var purchased_by = $("#purchased_by").val();
+  var vendor_name = $("#purchased_by option:selected").text(); 
+  $("#vendor_id").val(purchased_by)
+  $("#vendor_name").val(vendor_name)
+})
+// Voucer Code END
+
+});
 
      
       </script>  
      
-      {% endblock content %}
 </body>
 </html>
