--- a/livestockapp/templates/pregnancy_details/insert_pregnancy_detail.html
+++ b/livestockapp/templates/pregnancy_details/insert_pregnancy_detail.html
@@ -10,44 +10,12 @@
 {% block content %}
 
 
-<div  >
-  <div class="row min-vh-100 flex-column flex-md-row " style="margin-left:-13%;">
-    <aside class="col-12 col-md-3 col-xl-2 p-0 bg-dark ">
-      <nav class="navbar navbar-expand-md navbar-dark bd-dark flex-md-column flex-row align-items-center py-2 text-center sticky-top " id="sidebar">
-        <div class="text-center p-3">
-          <img src="https://impreza.us-themes.com/wp-content/uploads/paolo-bendandi-D-8XODEIr_s-unsplash.jpg" alt="profile picture" class="img-fluid rounded-circle my-4 p-1 d-none d-md-block shadow"/>
-         <a href="#" class="navbar-brand mx-0 font-weight-bold  text-nowrap" >XcentPupil</a>
-        </div>
-            <button type="button" class="navbar-toggler border-0 order-1" data-toggle="collapse" data-target="#nav" aria-controls="nav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-        
-        <div class="collapse navbar-collapse order-last" id="nav">
-          <ul class="navbar-nav flex-column w-100 justify-content-center">
-            <li class="nav-item">
-              <a href="#" class="nav-link active"> Edit Profile</a>
-            </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link"> Projects</a>
-            </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link"> Tasks </a>
-            </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link"> Users Info </a>
-            </li>
-          </ul>
-        </div>      
-      </nav>   
-    </aside>
-  </div>
-</div>
   
 {% comment %} <div class="container my-3"> 
   <div  style="margin-left:30%; margin-top:-42%; "><b></b></div> {% endcomment %}
-  <div style=" margin-top:-42%; ">
+  <div style="">
   <form action='/insert_pregnancy_detail' method="POST" >
-    <div class="alert alert-dark mt-5 row offset-2" role="alert" style="margin-top:50%;"><b >Basic Info</b></div>
+    <div class="alert alert-dark" role="alert" style=""><b >Basic Info</b></div>
     {% if error2 %}
     <div class="alert alert-danger offset-2" role="alert">
       Please Enter Token No !!    
@@ -87,7 +55,7 @@
 
 
     {% csrf_token %}
-    <div class="container-fluid" style="margin-left:10%;">
+    <div class="container-fluid" style="margin-left:0%;">
     <div class="row">
       <div class="col">
         <label class=" control-label">Token No :<span style="color:red; font-weight:bold;">*</span></label>
