--- a/livestockapp/templates/animal_profile/list_animal_profile.html
+++ b/livestockapp/templates/animal_profile/list_animal_profile.html
@@ -33,7 +33,7 @@
      {% for animal in animal_pro %}
      <tr>
        {% comment %} <th scope="row">{{forloop.counter}}</th> {% endcomment %}
-       <td>{{animal.token_no}}</td>
+       <td>Animal-{{animal.token_no}}</td>
        <td>{{animal.name}}</td>
        <td>{{animal.color}}</td>
        <td>{{animal.weight}}</td>
