--- a/livestockapp/templates/animal_profile/update_animal_profile.html
+++ b/livestockapp/templates/animal_profile/update_animal_profile.html
@@ -50,7 +50,7 @@
         <label class=" control-label">Token No :<span style="color:red; font-weight:bold;">*</span></label>
 
         <input type="text" class="form-control" name="animal_id" required maxlength="50" value="{{animal.animal_id}}" readonly hidden/>
-        <input type="text" class="form-control" id="token_no" name="token_no" value= "{{animal.token_no}}" >
+        <input type="text" class="form-control" id="token_no" name="token_no" value= "Animal-{{animal.token_no}}" readonly >
 
       </div>
       <div class="col">
